--- a/src/App.css
+++ b/src/App.css
@@ -1,105 +1,63 @@
-*{
-  box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
 }
-
-body{
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background-color: whitesmoke;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(170, 168, 168);
+}
+body {
   background: #131315;
-  font-family: 'Nunito Sans',sans-serif;
+  font-family: "Lora", serif;
 }
 
-.box{
-  position:absolute;
+.box {
+  position: absolute;
   top: 50%;
   left: 50%;
-  height: 700px;
-  width: 1000px;
+  height: 600px;
+  width: 900px;
   padding: 40px;
-  
-  transform: translate(-50%,-50%);
+
+  transform: translate(-50%, -50%);
   background: #242026;
-  box-shadow: 0 15px 25px rgba(143,124,236,0.7);
+  box-shadow: 0 15px 25px rgba(143, 124, 236, 0.7);
   border-radius: 10px;
 }
 
 /* For Bulk Email name*/
-.box h2{
-  margin: 0 0 30px;
-  padding: 0;
+.box h2 {
   color: #fff;
   text-align: center;
 }
 
-.box .default{
-  margin-top: 65px;
-}
-.box .default input{
+Label {
+  color: #fff;
   margin-top: 10px;
-  width: 50%;
-  color: #fff;
-  background: transparent;
-  outline: none;
-  position: relative;
-  border: none;
-  border-bottom: 1px solid #fff;
 }
 
-.box .ccmail{
-  margin: -50px 0px 0px 500px; /*  top right bottom left */
-}
-
-.box .ccmail input{
-  margin-top: 10px;
-  width: 100%;
-  color: #fff;
-  background: transparent;
-  outline: none;
-  position: relative;
-  border: none;
-  border-bottom: 1px solid #fff;
-}
-
-.box .subject input{
-  margin: 10px 0px 0px 0px;
-  width: 100%;
-  color: #fff;
-  background: transparent;
-  outline: none;
-  position: relative;
-  border: none;
-  border-bottom: 1px solid #fff;
-}
-
-
-.box .message textarea{
-  margin: 10px 0px 0px 0px;
-  width: 900px;
-  height: 150px;
-  color: #fff;
-  background-color: #242026;
-  border: 1px solid #fff;
-}
-
-.box .message,.subject,.ccmail,.default,.user label{
-  color: #fff;
-}
-
-.box button{
+Button {
   padding: 10px 20px;
-  color: #CBBDDB;
+  color: #cbbddb;
   font-size: 16px;
   text-decoration: none;
   text-transform: uppercase;
   overflow: hidden;
-  transition: .2s;
+  transition: 0.2s;
   letter-spacing: 4px;
-  border: 1px solid #8F7CEC;
-  margin: 30px 400px 0px;
+  border: 1px solid #8f7cec;
 }
 
-.box button:hover{
-  background: #8F7CEC;
+Button:hover {
+  background: #8f7cec;
   color: #fff;
   border-radius: 5px;
   cursor: pointer;
-  box-shadow: 0 0 5px #8F7CEC, 0 0 25px #8F7CEC,0 0 50px #8F7CEC,0 0 100px #8F7CEC;
+  box-shadow: 0 0 5px #8f7cec, 0 0 25px #8f7cec, 0 0 50px #8f7cec,
+    0 0 100px #8f7cec;
 }
